--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.4",
     "axios": "^1.6.7",
     "json-server": "^1.0.0-alpha.23",
     "pdf-html": "^1.0.5",
