--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^3.3.4",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "json-server": "^1.0.0-alpha.23",
     "pdf-html": "^1.0.5",
     "primeflex": "^3.3.1",
